--- a/index.html
+++ b/index.html
@@ -1,44 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>The Open Source Data Science Masters by datasciencemasters</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>The Open Source Data Science Masters by jxx</title>
   </head>
+
   <body>
 
-      <header>
+    <header>
+      <div class="container">
         <h1>The Open Source Data Science Masters</h1>
-        <p>Curriculum</p>
-      </header>
+        <h2>Curriculum</h2>
 
-      <div id="banner">
-        <span id="logo"></span>
+        <section id="downloads">
+          <a href="https://github.com/jxx/datasciencemasters/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/jxx/datasciencemasters/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/jxx/datasciencemasters" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-        <a href="https://github.com/datasciencemasters/go" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/datasciencemasters/go/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/datasciencemasters/go/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <p>The Curriculum for learning Data Science, Open Source and at your fingertips.</p>
 
 <h6>
@@ -269,12 +258,8 @@ Out of personal preference and need for focus, I geared the original curriculum 
 
 <p><a href="http://twitter.com/clarecorthell">Follow me on Twitter @clarecorthell</a></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/datasciencemasters">datasciencemasters</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
